[gd_scene load_steps=48 format=3 uid="uid://duaard6iebnvb"]

[ext_resource type="Script" path="res://scenes/test/test_bench.gd" id="1_ohmcr"]
[ext_resource type="Script" path="res://book/model/page_content_resource.gd" id="2_kf0ic"]
[ext_resource type="Resource" uid="uid://hw6gm0460xea" path="res://logic/resources/game_state.tres" id="2_yet2b"]
[ext_resource type="Script" path="res://book/model/content_element_text.gd" id="3_af5eq"]
[ext_resource type="Script" path="res://book/model/array_2d.gd" id="4_1pyc7"]
[ext_resource type="Texture2D" uid="uid://bu4onrvkrxtc2" path="res://assets/s_illumination.png" id="4_dutf7"]
[ext_resource type="Script" path="res://book/model/content_element_grid.gd" id="5_ttxps"]
[ext_resource type="Script" path="res://book/model/content_element_texture.gd" id="6_cvxbm"]
[ext_resource type="Texture2D" uid="uid://i0hit2hw6li3" path="res://assets/castle.png" id="6_gipuq"]
[ext_resource type="Texture2D" uid="uid://b76fg16rrc648" path="res://assets/Indoor_castle.png" id="7_x83pj"]
[ext_resource type="Script" path="res://book/model/book.gd" id="9_toekd"]
[ext_resource type="Script" path="res://book/model/content_element_prefab.gd" id="10_lrq8g"]
[ext_resource type="PackedScene" uid="uid://djfae1eiopiwp" path="res://book/page.tscn" id="10_pli3g"]
[ext_resource type="PackedScene" uid="uid://bjc7jv1nnel1q" path="res://book/page_content_2d.tscn" id="11_eeodf"]
[ext_resource type="Texture2D" uid="uid://b1r2ms52ld1xr" path="res://icon.svg" id="12_awx3f"]
[ext_resource type="PackedScene" uid="uid://bjvf0r1ite8af" path="res://scenes/3d_decoration/candle.tscn" id="14_kvyku"]
[ext_resource type="Shader" uid="uid://xtvikrg8jaoj" path="res://scenes/test/clouds.tres" id="15_lm3y6"]
[ext_resource type="PackedScene" uid="uid://c4xitk15dao8w" path="res://scenes/3d_decoration/book.tscn" id="16_5wqo5"]
[ext_resource type="Script" path="res://scenes/test/next_round_button.gd" id="17_aqwq0"]
[ext_resource type="Script" path="res://scenes/test/content_element_prefab_list.gd" id="18_d8wiv"]
[ext_resource type="Script" path="res://scenes/test/canvas_layer.gd" id="19_fekfn"]
[ext_resource type="PackedScene" uid="uid://bfmhxypwbuxdc" path="res://scenes/test/letter_stack.tscn" id="20_t155u"]
[ext_resource type="PackedScene" uid="uid://cufbv6co7u0ty" path="res://scenes/test/gui_tooltip.tscn" id="22_6s7c1"]
[ext_resource type="PackedScene" uid="uid://d0bfx0qw8wjbm" path="res://scenes/test/placement_preview.tscn" id="23_7xipy"]
[ext_resource type="PackedScene" uid="uid://bnkyp8sgmjmkq" path="res://scenes/test/gui_resource_table_tooltip.tscn" id="24_0p5nr"]
[ext_resource type="AudioStream" uid="uid://dcn57jqtm0gru" path="res://assets/background_track.mp3" id="24_yy0gc"]
[ext_resource type="AudioStream" uid="uid://ctdohg2d6l0i2" path="res://assets/page_turn.mp3" id="25_ghxux"]

[sub_resource type="Resource" id="Resource_2t3pb"]
script = ExtResource("6_cvxbm")
texture = ExtResource("4_dutf7")
size = Vector2i(1, 1)

[sub_resource type="Resource" id="Resource_eoywq"]
script = ExtResource("3_af5eq")
text = "chloss Vertikalschnipps"
font_size = 77
size = Vector2i(3, 1)

[sub_resource type="Resource" id="Resource_2afc1"]
script = ExtResource("3_af5eq")
text = "Sitz des Herrschers Alexej der Erbauer, geboren im Jahr 103. Erster Sohn un Thronfolger von König Wilhelm dem 12. und Königin Franziska die Gütige"
font_size = 32
size = Vector2i(4, 1)

[sub_resource type="Resource" id="Resource_86vgq"]
script = ExtResource("3_af5eq")
text = "Errichtet im Jahre 74 von König Wilhelm dem 12."
font_size = 32
size = Vector2i(3, 1)

[sub_resource type="Resource" id="Resource_k35lp"]
script = ExtResource("6_cvxbm")
texture = ExtResource("6_gipuq")
size = Vector2i(1, 2)

[sub_resource type="Resource" id="Resource_v20h3"]
script = ExtResource("3_af5eq")
text = "Das Königreich verfügt über 132 Leibeigene, Lehnsknechte und Hörige, 20 Untervasallen und 3 Kronvasallen."
font_size = 32
size = Vector2i(3, 1)

[sub_resource type="Resource" id="Resource_ih5l1"]
script = ExtResource("6_cvxbm")
texture = ExtResource("7_x83pj")
size = Vector2i(4, 2)

[sub_resource type="Resource" id="Resource_oh8n3"]
script = ExtResource("4_1pyc7")
_content = [SubResource("Resource_2t3pb"), SubResource("Resource_eoywq"), null, null, SubResource("Resource_2afc1"), null, null, null, SubResource("Resource_86vgq"), null, null, SubResource("Resource_k35lp"), SubResource("Resource_v20h3"), null, null, null, null, null, null, null, SubResource("Resource_ih5l1"), null, null, null, null, null, null, null]
_x = 4
_y = 7

[sub_resource type="Resource" id="Resource_llwj3"]
script = ExtResource("5_ttxps")
grid = SubResource("Resource_oh8n3")

[sub_resource type="Resource" id="Resource_iccmr"]
script = ExtResource("2_kf0ic")
page_number = 1
content_elements = SubResource("Resource_llwj3")

[sub_resource type="Resource" id="Resource_6ahdq"]
script = ExtResource("10_lrq8g")
name = "content_element_resource_overview"
size = Vector2i(4, 7)
texture = ExtResource("12_awx3f")
income = {}
usage = {}
cost = {}

[sub_resource type="Resource" id="Resource_oxnok"]
script = ExtResource("4_1pyc7")
_content = [SubResource("Resource_6ahdq"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]
_x = 4
_y = 7

[sub_resource type="Resource" id="Resource_u0vcb"]
script = ExtResource("5_ttxps")
grid = SubResource("Resource_oxnok")

[sub_resource type="Resource" id="Resource_etbm0"]
script = ExtResource("2_kf0ic")
page_number = 2
content_elements = SubResource("Resource_u0vcb")

[sub_resource type="Resource" id="Resource_oyt6s"]
script = ExtResource("9_toekd")
current_page = 1
pages = Array[ExtResource("2_kf0ic")]([SubResource("Resource_iccmr"), SubResource("Resource_etbm0")])
game_state = ExtResource("2_yet2b")

[sub_resource type="BoxShape3D" id="BoxShape3D_sjhxg"]
size = Vector3(0.341919, 0.225586, 3.3521)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67ujr"]
render_priority = 0
shader = ExtResource("15_lm3y6")
shader_parameter/ColorParameter = null

[sub_resource type="BoxMesh" id="BoxMesh_eymlf"]
material = SubResource("ShaderMaterial_67ujr")
size = Vector3(10, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_81euk"]
albedo_color = Color(0.21576, 0.10529, 0, 1)

[sub_resource type="Environment" id="Environment_o26hc"]
background_color = Color(0, 0.592481, 0.708946, 1)
ambient_light_source = 2
ambient_light_color = Color(0.0336119, 0.144024, 0.172659, 1)
tonemap_mode = 3
ssao_enabled = true
ssao_radius = 1.54
ssao_intensity = 5.28
ssil_enabled = true
sdfgi_enabled = true
sdfgi_read_sky_light = false
glow_enabled = true
glow_bloom = 0.01
glow_blend_mode = 1
fog_light_color = Color(0.245808, 0.595519, 0.738462, 1)
fog_light_energy = 0.52
fog_sun_scatter = 1.0
fog_density = 0.005
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(0.71598, 0.927325, 0.971492, 1)

[node name="TestBench" type="Node3D"]
script = ExtResource("1_ohmcr")
book = SubResource("Resource_oyt6s")

[node name="PreviousPage" parent="." instance=ExtResource("10_pli3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
progress = 0.01

[node name="CurrentPageL" parent="." instance=ExtResource("10_pli3g")]
progress = 0.01

[node name="CurrentPageR" parent="." instance=ExtResource("10_pli3g")]
left_page_up = true
progress = 0.99

[node name="NextPage" parent="." instance=ExtResource("10_pli3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
left_page_up = true
progress = 0.99

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999976, -0.00698126, -2.10837e-10, 0.00121876, 0.174572, 0.984644, -0.00687405, -0.98462, 0.174576, 0.0134686, 2.93849, 0.58138)
fov = 60.0
size = 3.0

[node name="PageContent2d" parent="." instance=ExtResource("11_eeodf")]

[node name="RightDragStartArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.896, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightDragStartArea3D"]
shape = SubResource("BoxShape3D_sjhxg")

[node name="LeftDragStartArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.896, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftDragStartArea3D"]
shape = SubResource("BoxShape3D_sjhxg")

[node name="Wall2" type="MeshInstance3D" parent="."]
transform = Transform3D(16, 0, 0, 0, 0.0307171, -5.99999, 0, 5.99999, 0.0043196, 92.7594, 18.7436, -21.8047)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall3" type="MeshInstance3D" parent="."]
transform = Transform3D(16, 0, 0, 0, 0.0307171, -5.99999, 0, 5.99999, 0.0043196, -92.759, 18.744, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall4" type="MeshInstance3D" parent="."]
transform = Transform3D(16, 0, 0, 0, 0.0307171, -5.99999, 0, 5.99999, 0.0043196, -1.03355, 54.0027, -20.6843)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall6" type="MeshInstance3D" parent="."]
transform = Transform3D(0.02, 0, 0, 0, 0.00051195, -3.99995, 0, 0.0999987, 0.020478, 0, 12.6121, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall7" type="MeshInstance3D" parent="."]
transform = Transform3D(0.02, 0, 0, 0, 0.00051195, -3.99995, 0, 0.0999987, 0.020478, 6.631, 12.6121, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall9" type="MeshInstance3D" parent="."]
transform = Transform3D(3.82137e-17, -4.37114e-09, -4, -0.02, -4.37114e-09, -2.63546e-22, -8.74228e-10, 0.1, -1.74846e-07, 6.631, 11.6864, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall11" type="MeshInstance3D" parent="."]
transform = Transform3D(3.82137e-17, -4.37114e-09, -4, -0.02, -4.37114e-09, -2.63546e-22, -8.74228e-10, 0.1, -1.74846e-07, 6.631, 18.1664, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall10" type="MeshInstance3D" parent="."]
transform = Transform3D(3.82137e-17, -4.37114e-09, -4, -0.02, -4.37114e-09, -2.63546e-22, -8.74228e-10, 0.1, -1.74846e-07, 6.631, 5.03586, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall8" type="MeshInstance3D" parent="."]
transform = Transform3D(0.02, 0, 0, 0, 0.00051195, -3.99995, 0, 0.0999987, 0.020478, -6.631, 12.6116, -21.805)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall5" type="MeshInstance3D" parent="."]
transform = Transform3D(16, 0, 0, 0, 6.00007, 0, 0, 0, 5.99999, 0, 58.6146, 7.85482)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="Wall" type="MeshInstance3D" parent="."]
transform = Transform3D(16, 0, 0, 0, 0.0307171, -5.99999, 0, 5.99999, 0.0043196, 0, -30.6859, -21.8047)
mesh = SubResource("BoxMesh_eymlf")
skeleton = NodePath("../TableTop")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="TableTop" type="MeshInstance3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 1.5, 0, -1.44805, -4.22378)
mesh = SubResource("BoxMesh_eymlf")
surface_material_override/0 = SubResource("StandardMaterial3D_81euk")

[node name="candle" parent="." instance=ExtResource("14_kvyku")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -3.6283, -1.07515, -1.75591)

[node name="candle2" parent="." instance=ExtResource("14_kvyku")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 3.634, -1.07515, -1.76202)

[node name="candle3" parent="." instance=ExtResource("14_kvyku")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 12.0648, -1.07515, -1.01991)

[node name="OmniLight3D" parent="candle3" index="2"]
omni_range = 8.0

[node name="book" parent="." instance=ExtResource("16_5wqo5")]
transform = Transform3D(0.497, 0, 0, 0, 0.497, 0, 0, 0, 0.497, 0, -0.538, -0.02)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("19_fekfn")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
mouse_filter = 1

[node name="NextRoundButton" type="Button" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Nächstes Jahr"
script = ExtResource("17_aqwq0")

[node name="ContentElementPrefabList" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 800.0
grow_horizontal = 0
script = ExtResource("18_d8wiv")

[node name="Up" type="Button" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.5
offset_right = 8.5
offset_bottom = 25.0
grow_horizontal = 2
text = "^"

[node name="Down" type="Button" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -25.0
offset_right = 8.5
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
text = "^"

[node name="Left" type="Button" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.5
offset_right = 16.0
offset_bottom = 12.5
grow_vertical = 2
text = "<"

[node name="Right" type="Button" parent="CanvasLayer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -12.5
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="GuiTooltip" parent="CanvasLayer" instance=ExtResource("22_6s7c1")]
visible = false

[node name="PlacementPreview" parent="CanvasLayer" instance=ExtResource("23_7xipy")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="GuiResourceTableTooltip" parent="CanvasLayer" instance=ExtResource("24_0p5nr")]
visible = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 148.545, 0)
light_color = Color(1, 0.858727, 0.74913, 1)
light_energy = 0.5
shadow_enabled = true
shadow_blur = 1.833
sky_mode = 1

[node name="LetterStack" parent="." instance=ExtResource("20_t155u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.05359, -1.08292, -0.343549)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_o26hc")

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_yy0gc")
volume_db = -80.0
autoplay = true

[node name="PageTurnAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_ghxux")
volume_db = -20.0

[connection signal="mouse_entered" from="RightDragStartArea3D" to="." method="_on_right_drag_start_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="RightDragStartArea3D" to="." method="_on_right_drag_start_area_3d_mouse_exited"]
[connection signal="mouse_entered" from="LeftDragStartArea3D" to="." method="_on_left_drag_start_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="LeftDragStartArea3D" to="." method="_on_left_drag_start_area_3d_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Control/Right" to="." method="_on_right_pressed"]

[editable path="PreviousPage"]
[editable path="CurrentPageL"]
[editable path="CurrentPageR"]
[editable path="NextPage"]
[editable path="PageContent2d"]
[editable path="candle"]
[editable path="candle2"]
[editable path="candle3"]
